<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2012 - 2020 YCSB contributors. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License"); you
may not use this file except in compliance with the License. You
may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
implied. See the License for the specific language governing
permissions and limitations under the License. See accompanying
LICENSE file.
-->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>site.ycsb</groupId>
  <artifactId>root</artifactId>
  <version>0.18.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>YCSB Root</name>

  <description>
    This is the top level project that builds, packages the core and all the DB bindings for YCSB infrastructure.
  </description>

  <url>https://ycsb.site/</url>
  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <!-- Please see git for authorship information.
         This list is project maintainers -->
    <developer>
      <id>allanbank</id>
      <name>Robert J. Moore</name>
      <email>robert.j.moore@allanbank.com</email>
    </developer>
    <developer>
      <id>busbey</id>
      <name>Sean Busbey</name>
      <email>sean.busbey@gmail.com</email>
    </developer>
    <developer>
      <id>cmatser</id>
      <name>Chrisjan Matser</name>
      <email>cmatser@codespinnerinc.com</email>
    </developer>
    <developer>
      <id>stfeng2</id>
      <name>Stanley Feng</name>
      <email>stfeng@google.com</email>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git://github.com/brianfrankcooper/YCSB.git</connection>
    <tag>master</tag>
    <url>https://github.com/brianfrankcooper/YCSB</url>
  </scm>
  <distributionManagement>
    <repository>
      <id>sonatype.releases.https</id>
      <name>Release Repo at sonatype oss.</name>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
    </repository>
    <snapshotRepository>
      <id>sonatype.snapshots.https</id>
      <name>snapshot Repo at sonatype oss.</name>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.puppycrawl.tools</groupId>
        <artifactId>checkstyle</artifactId>
        <version>7.7.1</version>
      </dependency>
      <dependency>
        <groupId>org.jdom</groupId>
        <artifactId>jdom</artifactId>
        <version>1.1</version>
      </dependency>
      <dependency>
        <groupId>com.google.collections</groupId>
        <artifactId>google-collections</artifactId>
        <version>1.0</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.25</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <!-- Properties Management -->
  <properties>
    <maven.assembly.version>2.5.5</maven.assembly.version>
    <maven.dependency.version>2.10</maven.dependency.version>

    <!-- datastore binding versions, lex sorted -->
    <!--
    <accumulo.1.9.version>1.9.3</accumulo.1.9.version>
    <aerospike.version>3.1.2</aerospike.version>
    <arangodb.version>4.4.1</arangodb.version>
    <asynchbase.version>1.8.2</asynchbase.version>
    <azurecosmos.version>4.8.0</azurecosmos.version>
    <azurestorage.version>4.0.0</azurestorage.version>
    <cassandra.cql.version>3.0.0</cassandra.cql.version>
    <cloudspanner.version>6.91.1</cloudspanner.version>
    <couchbase.version>1.4.10</couchbase.version>
		<couchbase2.version>2.3.1</couchbase2.version>
		<crail.version>1.1-incubating</crail.version>
    <elasticsearch5-version>5.5.1</elasticsearch5-version>
    <foundationdb.version>5.2.5</foundationdb.version>
    <geode.version>1.2.0</geode.version>
    -->
    <!-- deprecated, please use googlebigtable2 -->
    <!--
    <googlebigtable.version>1.4.0</googlebigtable.version>
    <googlebigtable2.version>2.47.0</googlebigtable2.version>
    <griddb.version>4.0.0</griddb.version>
    <hbase1.version>1.4.12</hbase1.version>
    <hbase2.version>2.2.3</hbase2.version>
    <ignite.version>2.7.6</ignite.version>
    <infinispan.version>7.2.2.Final</infinispan.version>
    <kudu.version>1.11.1</kudu.version>
    <maprhbase.version>1.1.8-mapr-1710</maprhbase.version>
    <mongodb.version>5.1.0</mongodb.version>
    <mongodb.async.version>2.0.1</mongodb.async.version>
    <openjpa.jdbc.version>2.1.1</openjpa.jdbc.version>
    <orientdb.version>2.2.37</orientdb.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <redis.version>2.9.0</redis.version>
    <riak.version>2.0.5</riak.version>
    <rocksdb.version>6.2.2</rocksdb.version>
    <s3.version>1.10.20</s3.version>
    <seaweed.client.version>1.4.1</seaweed.client.version>
    <scylla.cql.version>3.10.2-scylla-1</scylla.cql.version>
    <solr7.version>7.7.2</solr7.version>
    <tarantool.version>1.6.5</tarantool.version>
    <thrift.version>0.8.0</thrift.version>
    <tablestore.version>4.8.0</tablestore.version>
    <voltdb.version>10.1.1</voltdb.version>
    -->
    <zookeeper.version>3.5.8</zookeeper.version>
    <paxi.version>1.0.0</paxi.version>
    <holipaxos.version>1.0.0</holipaxos.version>
    <xdn.version>1.0.0</xdn.version>
  </properties>

  <modules>
    <!-- our internals -->
    <module>core</module>
    <module>binding-parent</module>
    <module>distribution</module>
    <!-- all the datastore bindings, lex sorted please -->
    <module>paxi</module>
    <module>hraftd</module>
    <module>holipaxos</module>
    <module>tikv</module>
    <module>xdn</module>
    <module>zookeeper</module>
    <module>etcd</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>2.16</version>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>3.0.0-M1</version>
        <executions>
          <execution>
            <id>enforce-maven</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <!--
                  Maven 3.6.2 has issues
                  https://github.com/brianfrankcooper/YCSB/issues/1390
                  -->
                  <version>[3.1.0,3.6.2),(3.6.2,)</version>
                </requireMavenVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-checkstyle-plugin</artifactId>
        <executions>
          <execution>
            <id>validate</id>
            <phase>validate</phase>
            <goals>
              <goal>check</goal>
            </goals>
            <configuration>
              <configLocation>checkstyle.xml</configLocation>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <!-- plugins needed to pass sonatype repo checks -->
      <id>ycsb-release</id>
      <properties>
        <doclint>none</doclint>
      </properties>
      <build>
        <pluginManagement>
          <plugins>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-deploy-plugin</artifactId>
              <version>3.0.0-M1</version>
            </plugin>
          </plugins>
        </pluginManagement>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.1.1</version>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-release-artifacts</id>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
